feat: white label zapclick

--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -205,6 +205,7 @@
     "CONVERSATIONS": "Conversations",
     "INBOX": "Inbox",
     "ALL_CONVERSATIONS": "All Conversations",
+    "STATUS_CONVERSATIONS": "Kanban",
     "MENTIONED_CONVERSATIONS": "Mentions",
     "PARTICIPATING_CONVERSATIONS": "Participating",
     "UNATTENDED_CONVERSATIONS": "Unattended",
