--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -121,7 +121,11 @@
       },
       "AVAILABILITY": {
         "LABEL": "Availability",
-        "STATUSES_LIST": ["Online", "Busy", "Offline"],
+        "STATUSES_LIST": [
+          "Online",
+          "Busy",
+          "Offline"
+        ],
         "SET_AVAILABILITY_SUCCESS": "Availability has been set successfully",
         "SET_AVAILABILITY_ERROR": "Couldn't set availability, please try again"
       },
@@ -207,6 +211,7 @@
     "ALL_CONVERSATIONS": "All Conversations",
     "STATUS_CONVERSATIONS": "Kanban",
     "STATUS_CONVERSATIONS_EJ2": "Kanban-EJ2",
+    "SCHEDULE": "Schedule",
     "MENTIONED_CONVERSATIONS": "Mentions",
     "PARTICIPATING_CONVERSATIONS": "Participating",
     "UNATTENDED_CONVERSATIONS": "Unattended",
