feat: add schedule and flow view

--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -212,6 +212,7 @@
     "STATUS_CONVERSATIONS": "Kanban",
     "STATUS_CONVERSATIONS_EJ2": "Kanban-EJ2",
     "SCHEDULE": "Schedule",
+    "FLOW_DEVBOT": "Fluxo",
     "MENTIONED_CONVERSATIONS": "Mentions",
     "PARTICIPATING_CONVERSATIONS": "Participating",
     "UNATTENDED_CONVERSATIONS": "Unattended",
