feat: add new devbot

--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -212,7 +212,9 @@
     "STATUS_CONVERSATIONS": "Kanban",
     "STATUS_CONVERSATIONS_EJ2": "Kanban-EJ2",
     "SCHEDULE": "Schedule",
-    "FLOW_DEVBOT": "Fluxo",
+    "FLOW_DEVBOT": "Typebot Flow",
+    "DEVBOTS": "DevBot",
+    "BOT": "Typebot Flow",
     "MENTIONED_CONVERSATIONS": "Mentions",
     "PARTICIPATING_CONVERSATIONS": "Participating",
     "UNATTENDED_CONVERSATIONS": "Unattended",
