Feat: Add Property and Values to Conversation(refactor later)

--- a/app/javascript/dashboard/i18n/locale/pt_BR/contact.json
+++ b/app/javascript/dashboard/i18n/locale/pt_BR/contact.json
@@ -51,6 +51,10 @@
       "PREVIOUS_CONVERSATIONS": "Conversas anteriores"
     }
   },
+  "ADD_DATA": {
+    "TITLE": "Adicionar Informações Extras",
+    "DESC": "Cadastrar Informações"
+  },
   "EDIT_CONTACT": {
     "BUTTON_LABEL": "Alterar Contato",
     "TITLE": "Alterar contato",
