--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -216,7 +216,7 @@
     "SCHEDULE": "Schedule",
     "FLOW_DEVBOT": "Typebot Flow",
     "INSTANCES_FLOW": "Instances",
-    "EVOLUTION": "Evolution",
+    "EVOLUTION": "Instances",
     "DEVBOTS": "DevBot",
     "BOT": "Typebot Flow",
     "MENTIONED_CONVERSATIONS": "Mentions",
